src/test/deca/context/invalid/provided/ContextSansObjet/OperationsBooleennes/AndBoolString.deca
//Description :
//	Vérification contextuelle de l'opérateur && avec pour entree <boolean, string>
//
//Résultats :
//	Erreur Contextuelle
//  Ligne 10 : les deux opérateurs doivent être de type boolean

{
    boolean x = true;
    boolean y = x && "Hello"";
}